レスポンシブに関するTOPページの文言の修正

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -29,6 +29,7 @@
         <div class="lg:mt-0 ml-0 lg:ml-10 flex flex-col items-start justify-center lg:px-0">
           <p class="lg:text-2xl font-yusei lg:mx-0 mx-2">このwebアプリでは<span class="text-rose-800">プログラミング中によく見かける英単語</span> を <span class="text-rose-800">ネイティブっぽく発音する方法</span> が ゆるーく学べるよ。</p>
           <p class="lg:text-2xl font-yusei lg:mx-0 mx-2">なぜ ゆるーく なのかというと、ここでおこなっていることは、<span class="text-rose-800">はつおん記号を使わずに 英単語にひらがなでふりがなをふる </span>という試みだからだよ。</p>
+          <p class="lg:hidden font-yusei lg:mx-0 mx-2">モバイル版では、以下の もんだい 機能が使えるよ。</p>
         </div>
       </div>
 
