--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,4 +1,12 @@
-<p class="mx-auto text-4xl text-center font-rocknroll break-words mt-5"><%= t('main.library_announcement') %></p>
+<div class="flex justify-center items-center mt-5">
+  <p class="text-4xl font-rocknroll break-words mr-5"><%= t('main.library_announcement') %></p>
+  <div data-controller="autocomplete" data-autocomplete-url-value="<%= autocomplete_words_path %>" role="combobox" class="text-lg">
+    <input type="text" data-autocomplete-target="input" class="border rounded" autofocus placeholder="<%= t('placeholder.search') %>">
+    <input type="hidden" name="word_id" data-autocomplete-target="hidden"/>
+    <ul class="list-group" data-autocomplete-target="results"></ul>
+  </div>
+</div>
+
 <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ <%= t('main.sound_notice')%></p>
 
 <div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 pb-52 mb-20">
