--- a/app/views/tutorials/library_index.html.erb
+++ b/app/views/tutorials/library_index.html.erb
@@ -1,5 +1,12 @@
 <p class="mx-auto text-3xl text-center font-yusei break-words mt-5">おためしでは <span class="text-rose-900">sequence</span>・<span class="text-rose-900">through</span>・<span class="text-rose-900">width</span> の3単語の詳細を見ることができるよ！</p>
-<p class="mx-auto text-3xl text-center font-yusei break-words mt-2"><%= t('tutorials.announcement') %></p>
+<div class="flex justify-center items-center mt-5">
+  <p class="text-4xl font-rocknroll break-words mr-5"><%= t('main.library_announcement') %></p>
+  <div data-controller="autocomplete" data-autocomplete-url-value="<%= tutorial_autocomplete_words_path %>" role="combobox" class="text-lg">
+    <input type="text" data-autocomplete-target="input" class="border rounded" autofocus placeholder="<%= t('placeholder.search') %>">
+    <input type="hidden" name="word_id" data-autocomplete-target="hidden"/>
+    <ul class="list-group" data-autocomplete-target="results"></ul>
+  </div>
+</div>
 <p class="mx-auto text-3xl text-center font-yusei break-words text-rose-900 mt-8">※ <%= t('main.sound_notice') %></p>
 
 <div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 pb-52 mb-20">
