--- a/app/views/tutorials/_tutorial_autocomplete_results.html.erb
+++ b/app/views/tutorials/_tutorial_autocomplete_results.html.erb
@@ -1,5 +1,7 @@
 <% words.each do |word| %>
   <li class="list-group-item" role="option" data-autocomplete-value="<%= word.id %>" data-autocomplete-label="<%= word.name %>">
-    <%= link_to word.name, library_explanation_tutorials_path(word_id: word.id) %>
+    <%= link_to library_explanation_tutorials_path(word_id: word.id), class: 'hover:bg-yellow-200 block w-full text-left px-3', style: 'text-decoration: none;' do %>
+      <%= word.name %>
+    <% end %>
   </li>
 <% end %>
