--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
   <%= display_meta_tags(default_meta_tags) %>
 
   <meta name="google-site-verification" content="0PHSccm3wMmn0viU8zme3x8rn_gld42HuE1ZYCvmbcI" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
 </head>
 <body>
   <% header_class = controller_name == "homes" && action_name == "top" ? "fixed top-0 w-full z-10" : "" %>
