--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
       <ul class="menu menu-horizontal px-3 text-xl font-yusei text-base-200">
         <li>
           <% if user_signed_in? %>
-            <%= link_to quiz_path(Quiz.all.pluck(:id).sample), class: "header-loggedout btn bg-blue-600 hover:bg-blue-500 text-white hover:text-white font-yusei px-8 text-lg mr-5 block text-center" do %>
+            <%= link_to quiz_path(Quiz.all.pluck(:id).sample), class: "header-loggedout btn bg-blue-600 hover:bg-blue-500 text-white hover:text-white font-yusei text-lg mr-5 block text-center" do %>
               <%= t('main.start_quiz') %>
             <% end %>
         </li>
@@ -71,19 +71,19 @@
 <div class="lg:hidden">
   <div class="navbar bg-yellow-600">
     <div class="flex-1">
-      <%= link_to t('defaults.emon'), root_path, class: 'btn bg-rose-900 hover:bg-rose-800 text-white font-yusei'%>
+      <%= link_to t('defaults.emon'), root_path, class: 'btn btn-sm bg-rose-900 hover:bg-rose-800 text-white font-yusei'%>
     </div>
     <div class="flex-none">
       <ul class="menu menu-horizontal font-yusei text-base-200">
         <li>
           <% if user_signed_in? %>
-            <%= link_to quiz_path(Quiz.all.pluck(:id).sample), class: "btn bg-blue-600 hover:bg-blue-500 text-white hover:text-white font-yusei block text-center h-10 py-4 mr-1" do %>
+            <%= link_to quiz_path(Quiz.all.pluck(:id).sample), class: "btn btn-sm bg-blue-600 hover:bg-blue-500 text-white hover:text-white font-yusei block text-center mr-1" do %>
               <%= t('main.start_quiz') %>
             <% end %>
         </li>
         <li>
           <details>
-            <summary class="btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei h-10 py-4 ml-1"><%= current_user.name %></summary>
+            <summary class="btn btn-sm bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei ml-1"><%= current_user.name %></summary>
             <ul class="p-2 shadow menu dropdown-content z-[1] bg-base-300 rounded-box">
               <li class="text-rose-900"><%= t('main.user_level') %>：<%= current_user.level %></li>
               <li class="text-black"><%= link_to t('defaults.edit_user_information'), edit_user_registration_path %></li>
@@ -96,8 +96,8 @@
           </details>
         </li>
           <% else %>
-        <li class="mr-1"><%= link_to t('tutorials.title'), quiz_show_tutorial_path(1), class: "btn bg-rose-900 hover:bg-rose-800 text-white font-yusei block h-10 py-4" %></li>
-        <li class="ml-1"><%= link_to t('defaults.login'), new_user_session_path, class: "header-loggedout btn bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei block h-10 py-4" %></li>
+        <li class="mr-1"><%= link_to t('tutorials.title'), quiz_show_tutorial_path(1), class: "btn btn-sm bg-rose-900 hover:bg-rose-800 text-white font-yusei block" %></li>
+        <li class="ml-1"><%= link_to t('defaults.login'), new_user_session_path, class: "header-loggedout btn btn-sm bg-rose-900 hover:bg-rose-800 text-white hover:text-white font-yusei block" %></li>
         <% end %>
         </li>
       </ul>
