--- a/app/views/quizzes/_level_up_modal.html.erb
+++ b/app/views/quizzes/_level_up_modal.html.erb
@@ -3,18 +3,18 @@
     <% if @user.level == 0 %>
       <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1">〜<%= t('modal.prologue') %>〜</h3>
       <div class="flex space-x-4">
-        <%= image_tag("keshiki0.png", alt: "Prologue Image") %>
+        <%= image_tag("keshiki0.webp", alt: "Prologue Image") %>
       </div>
     <% elsif @user.level >= 1 && @user.level <= 9 %>
       <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1"><%= t('modal.congratulations') %></h3>
       <p class="text-xl font-dotgothic font-bold text-center text-violet-900 mb-1"><%= t('modal.notice') %></p>
       <div class="flex space-x-4">
-        <%= image_tag("keshiki.png", alt: "Conversation Image") %>
+        <%= image_tag("keshiki.webp", alt: "Conversation Image") %>
       </div>
     <% else %>
       <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1">〜<%= t('modal.epilogue') %>〜</h3>
       <div class="flex space-x-4">
-        <%= image_tag("epi.png", alt: "Epilogue Condition Image") %>
+        <%= image_tag("epi.webp", alt: "Epilogue Condition Image") %>
       </div>
     <% end %>
     <div class="flex md:flex-row flex-col mt-2">
