TOP画像の拡張子の変更

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,6 +1,6 @@
 <body class="relative min-h-screen">
   <div class="mt-5">
-    <%= image_tag("edo2.png", alt: "Top Image") %>
+    <%= image_tag("edo2.webp", alt: "Top Image") %>
   </div>
   <div class="mt-5 lg:p-0">
   <div class="relative flex flex-col items-center max-w-7xl mx-auto bg-orange-100 rounded-xl border-4 border-transparent hover:border-rose-200 mb-10 lg:pb-52 pb-10">
