--- a/app/views/quizzes/_level_up_modal.html.erb
+++ b/app/views/quizzes/_level_up_modal.html.erb
@@ -1,13 +1,13 @@
 <dialog id="level-up-modal" class="modal">
   <form method="dialog" class="modal-box w-11/12 max-w-5xl mx-auto">
-    <% if @user.level == 0 %>
+    <% if user.level == 0 %>
       <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1">〜<%= t('modal.prologue') %>〜</h3>
       <div class="flex space-x-4">
         <%= image_tag("keshiki0.webp", alt: "Prologue Image") %>
       </div>
-    <% elsif @user.level >= 1 && @user.level <= 9 %>
-      <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1"><%= t('modal.congratulations') %></h3>
-      <p class="text-xl font-dotgothic font-bold text-center text-violet-900 mb-1"><%= t('modal.notice') %></p>
+    <% elsif user.level >= 1 && user.level <= 9 %>
+      <h3 class="lg:text-2xl text-lg font-dotgothic text-center text-violet-900 mb-1"><%= t('modal.congratulations', level: user.level) %></h3>
+      <p class="lg:text-lg font-dotgothic text-center text-violet-900 mb-1"><%= t('modal.notice') %></p>
       <div class="flex space-x-4">
         <%= image_tag("keshiki.webp", alt: "Conversation Image") %>
       </div>
