--- a/app/views/quizzes/_level_up_modal.html.erb
+++ b/app/views/quizzes/_level_up_modal.html.erb
@@ -6,12 +6,20 @@
         <%= image_tag("keshiki0.webp", alt: "Prologue Image") %>
       </div>
     <% elsif user.level >= 1 && user.level <= 9 %>
+      <div class="flex items-center">
+        <h3 class="text-lg font-dotgothic text-left text-violet-900 mb-1 mr-4"><%= t('modal.screenshot') %></h3>
+        <%= link_to t('main.share'), "https://twitter.com/intent/tweet?text=やった！レベル#{user.level}になったよ！もうふりがないんぐりっしゅマスターを名乗ろう！&hashtags=eigoemon&url=#{root_url}", class: 'btn btn-xs font-rocknroll bg-black hover:bg-black-600 text-white', target: "_blank" %>
+      </div>
       <h3 class="lg:text-2xl text-lg font-dotgothic text-center text-violet-900 mb-1"><%= t('modal.congratulations', level: user.level) %></h3>
       <p class="lg:text-lg font-dotgothic text-center text-violet-900 mb-1"><%= t('modal.notice') %></p>
       <div class="flex space-x-4">
         <%= image_tag("keshiki.webp", alt: "Conversation Image") %>
       </div>
     <% else %>
+      <div class="flex items-center">
+        <h3 class="text-lg font-dotgothic text-left text-violet-900 mb-1 mr-4"><%= t('modal.screenshot') %></h3>
+        <%= link_to t('main.share'), "https://twitter.com/intent/tweet?text=現代にかえってきたよ！また英語えもんには会える気がするなあ・・・。&hashtags=eigoemon&url=#{root_url}", class: 'btn btn-xs font-rocknroll bg-black hover:bg-black-600 text-white', target: "_blank" %>
+      </div>
       <h3 class="text-2xl font-dotgothic font-bold text-center text-violet-900 mb-1">〜<%= t('modal.epilogue') %>〜</h3>
       <div class="flex space-x-4">
         <%= image_tag("epi.webp", alt: "Epilogue Condition Image") %>
