--- a/app/views/shared/_youglish.html.erb
+++ b/app/views/shared/_youglish.html.erb
@@ -2,10 +2,10 @@
   <div id="youglish-player"></div>
   <div id="youglish-widget" data-word="<%= word.name %>"></div>
   <div class="text-center">
-    <button id="play-button" class="btn btn-primary text-sm lg:text-base"><%= t('youglish.play') %></button>
-    <button id="pause-button" class="btn btn-secondary text-sm lg:text-base"><%= t('youglish.pause') %></button>
-    <button id="next-button" class="btn btn-primary text-sm lg:text-base"><%= t('youglish.next') %></button>
-    <button id="prev-button" class="btn btn-secondary"><%= t('youglish.previous') %></button>
-    <button id="repeat-button" class="btn btn-secondary text-sm lg:text-base"><%= t('youglish.repeat') %></button>
+    <button id="play-button" class="lg:btn lg:btn-primary btn btn-primary btn-sm text-sm lg:text-base"><%= t('youglish.play') %></button>
+    <button id="pause-button" class="lg:btn lg:btn-secondary btn btn-secondary btn-sm text-sm lg:text-base"><%= t('youglish.pause') %></button>
+    <button id="next-button" class="lg:btn lg:btn-primary btn btn-primary btn-sm text-sm lg:text-base"><%= t('youglish.next') %></button>
+    <button id="prev-button" class="lg:btn lg:btn-secondary btn btn-secondary btn-sm lg:text-base"><%= t('youglish.previous') %></button>
+    <button id="repeat-button" class="lg:btn lg:btn-secondary btn btn-secondary btn-sm text-sm lg:text-base"><%= t('youglish.repeat') %></button>
   </div>
 </div>
