--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -77,7 +77,7 @@
       <ul class="menu menu-horizontal font-yusei text-base-200">
         <li>
           <% if user_signed_in? %>
-            <%= link_to quiz_path(Quiz.all.pluck(:id).sample), class: "btn btn-sm bg-blue-600 hover:bg-blue-500 text-white hover:text-white font-yusei block text-center mr-1" do %>
+            <%= link_to link_to random_quiz_quizzes_path, class: "btn btn-sm bg-blue-600 hover:bg-blue-500 text-white hover:text-white font-yusei block text-center mr-1" do %>
               <%= t('main.start_quiz') %>
             <% end %>
         </li>
