--- a/app/views/tutorials/library_index.html.erb
+++ b/app/views/tutorials/library_index.html.erb
@@ -9,7 +9,7 @@
   <p class="mx-auto text-3xl text-center font-yusei mt-3">おためしでは <span class="text-blue-600 font-rowdies text-5xl">sequence</span>・<span class="text-blue-600 font-rowdies text-5xl">through</span>・<span class="text-blue-600 font-rowdies text-5xl">width</span> の3単語の詳細だけを見ることができるよ！</p>
 <p class="mx-auto text-3xl text-center font-yusei break-words text-rose-900 mt-8">※ <%= t('main.sound_notice') %></p>
 
-<div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 pb-52 mb-40">
+<div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 mb-40">
   <% @words.each do |word| %>
     <div class="m-3 inline-block">
       <% if word.id == 1 || word.id == 4 || word.id == 7 %>
