--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -9,7 +9,7 @@
 
 <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ <%= t('main.sound_notice')%></p>
 
-<div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 pb-52 mb-40">
+<div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 mb-40">
     <% @words.each do |word| %>
       <div class="m-3 inline-block">
         <code class="hover:bg-yellow-500 hover:text-gray-900 text-2xl px-3">
