--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -9,16 +9,12 @@
 
 <p class="mx-auto text-2xl text-center font-yusei break-words text-rose-900 mt-3">※ <%= t('main.sound_notice')%></p>
 
-<div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 mb-40 flex flex-col items-center justify-center">
-    <% @words.each_slice(6) do |word_group| %>
-      <div class="flex flex-wrap justify-center">
-        <% word_group.each do |word| %>
-          <div class="m-3 inline-block flex-none">
-            <code class="hover:bg-yellow-500 hover:text-gray-900 text-2xl px-3">
-              <%= link_to word.name, english_explanation_path(word) %>
-            </code>
-          </div>
-        <% end %>
+<div class="mockup-code mt-3 mx-28 bg-gray-600 text-white p-3 mb-40 flex flex-wrap justify-center">
+    <% @words.each do |word| %>
+      <div class="m-3 w-60 text-center">
+        <code class="hover:bg-yellow-500 hover:text-gray-900 text-2xl px-3">
+          <%= link_to word.name, english_explanation_path(word) %>
+        </code>
       </div>
     <% end %>
 </div>
