--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -81,7 +81,7 @@
       <div class="hidden lg:flex flex-col lg:flex-row items-start mt-20 w-full">
       <!-- 小さなカード -->
       <div class="flex-shrink-0 mx-auto lg:mx-0 lg:ml-24 flex items-center justify-center bg-rose-900 rounded-2xl w-36 lg:w-48 h-7 py-4 lg:py-6 mt-3">
-        <h2 class="text-white text-xl lg:text-2xl font-rocknroll text-center"><i class="fa-solid fa-microphone"></i> マイクボタン</h2>
+        <h2 class="text-white text-xl lg:text-2xl font-rocknroll text-center"><i class="fa-solid fa-microphone"></i> おけいこ</h2>
       </div>
       <!-- 右寄せのテキスト部分 -->
       <div class="mt-4 lg:mt-0 ml-0 lg:ml-10 flex flex-col items-start justify-center px-4 lg:px-0">
