--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -10,12 +10,6 @@
 </div>
 
 <div class="mockup-code mt-3 mx-28 bg-gray-600 text-white mb-10 flex flex-wrap justify-center overflow-y-auto" style="max-height: 400px;">
-    <% @words.each do |word| %>
-      <div class="m-3 w-60 text-center">
-        <code class="hover:bg-yellow-500 hover:text-gray-900 text-2xl px-3">
-          <%= link_to word.name, english_explanation_path(word) %>
-        </code>
-      </div>
-    <% end %>
+  <%= render partial: 'word', collection: @words %>
 </div>
 
