admin画面のパーシャルファイル名・呼び出し方を修正

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,7 +15,7 @@
       </tr>
     </thead>
     <tbody class="bg-white divide-y divide-gray-200">
-      <%= render partial: 'admin/users/user_row', collection: @users, as: :user %>
+      <%= render partial: 'user', collection: @users %>
     </tbody>
   </table>
 </div>
