トップページ説明文の誤字を修正

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -110,7 +110,7 @@
         <p class="pt-1">・「r」で始まる英単語には、最初に小さな「う」を添えていることが多いよ</p> 
         <p class="pt-1">　これは、「う」の口の形をすることで、「r」の音を出しやすくするためだよ</p>                                                       
         <p class="pt-3">・「じ」と「ぢ」は、発音記号にあわせて表記をわけているよ。</p>
-        <p class="pt-1">　具体的には、「ʒ（まさつ音）」を「じ」、「dʒ（はさつ音）を「ぢ」と表しているよ</p> 
+        <p class="pt-1">　具体的には、「ʒ（まさつ音）」を「じ」、「dʒ（はさつ音）」を「ぢ」と表しているよ</p> 
         <p class="pt-1">※ 細かいことは最初は気にせず、慣れてきたら意識して言い分けてみよう</p>                  
         <p class="pt-3">・どの部分の音を強調するのかを明確にするために、やや大袈裟にふりがなをふっていることがあるよ</p>
       </div>
