モバイルサイズのロゴを変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -73,7 +73,7 @@
 <div class="lg:hidden">
   <div class="navbar bg-yellow-600">
     <div class="flex-1">
-      <%= link_to t('defaults.emon'), root_path, class: 'btn btn-sm font-sm  bg-rose-900 hover:bg-rose-800 text-white font-yusei'%>
+      <%= link_to image_tag("logo.webp", alt: "eigoemon Logo"), root_path, class:"w-11" %>
     </div>
     <div class="flex-none">
       <ul class="menu menu-horizontal font-yusei text-base-200">
