フッターに問い合わせ用の開発者Twitterリンクを記載
 with '#' will be ignored, and an empty message aborts the commit.

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,6 +2,7 @@
   <div class="grid grid-flow-col gap-4">
     <%= link_to 'プライバシーポリシー', pages_privacy_path, class: 'link link-hover text-base-200 lg:text-lg'%> 
     <%= link_to '利用規約', pages_terms_path, class: 'link link-hover text-base-200 lg:text-lg'%> 
+    <%= link_to '開発者X（旧Twitter）', 'https://twitter.com/YmKandew9', class: 'link link-hover text-base-200 lg:text-lg'%> 
   </div> 
   <div class="grid grid-flow-col gap-4">
     <p class="text-base-200 lg:text-lg">Copyright © <%= Time.current.year %> - All rights reserved by はつめい屋 英語えもん</p>
