--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -49,7 +49,7 @@
             <%= f.submit t('defaults.update'), class: "btn btn-primary" %>
           </div>
         <% end %>
-        <%= button_to "Cancel my account", registration_path(resource_name), data: { turbo_confirm: "アカウントの削除は取り消せません。削除しますか?" }, method: :delete, class: "text-lg" %>
+        <%= button_to t('users.edit.Cancel my account'), registration_path(resource_name), data: { turbo_confirm: "アカウントの削除は取り消せません。削除しますか?" }, method: :delete, class: "text-lg" %>
     </div>
   </div>
   </div>
